--- a/petshop-devinhouse/package.json
+++ b/petshop-devinhouse/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "petshop-devinhouse",
+  "name": "DEVinHouse-Cypress",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1"
+    "@testing-library/user-event": "^13.2.1",
+    "cypress": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +25,9 @@
     "test": "react-scripts test --watchAll=false",
     "test:dev": "react-scripts test",
     "coverage": "react-scripts test --coverage --watchAll=false",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "npx cypress run",
+    "open": "npx cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -58,5 +61,8 @@
       "!src/**/*.{style,styles}.js",
       "!src/**/(index|App).js"
     ]
-  }
+  },
+  "main": "index.js",
+  "author": "Thiago Mathias Simon",
+  "license": "MIT"
 }
